--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   },
   "require": {
     "vitessecms/language": "~0.0.1",
-    "vitessecms/core": "~0.0.1"
+    "vitessecms/core": "~0.0.1",
+    "vitessecms/form": "~0.0.5"
   }
 }
