--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
   "require": {
     "vitessecms/language": "~0.2.2",
     "vitessecms/core": "~0.2.10",
-    "vitessecms/form": "~0.2.7"
+    "vitessecms/form": "~0.2.7",
+    "vitessecms/database": "~0.2.4",
+    "vitessecms/admin": "~0.2.4",
+    "vitessecms/content": "~0.2.11"
   }
 }
