--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "vitessecms/form": "~0.2.9",
     "vitessecms/database": "~0.2.5",
     "vitessecms/admin": "~0.2.9",
-    "vitessecms/content": "~0.2.19"
+    "vitessecms/content": "~0.2.19",
+    "vitessecms/mustache": "~0.2.8"
   }
 }
