--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
   "name": "vitessecms/sef",
   "type": "library",
   "description": "Sef module for VitesseCms",
-  "keywords": ["php","phalcon","vitessecms"],
+  "keywords": [
+    "php",
+    "phalcon",
+    "vitessecms"
+  ],
   "homepage": "https://github.com/thedigitalproblemsolver/VitesseCMS",
   "license": "GPL-2.0-or-later",
   "version": "0.2.1",
