--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     }
   },
   "require": {
-    "vitessecms/language": "~0.3.5",
-    "vitessecms/core": "~0.5.1",
-    "vitessecms/form": "~0.4.5",
-    "vitessecms/database": "~0.3.5",
-    "vitessecms/admin": "~0.5.1",
-    "vitessecms/content": "~0.5.1",
-    "vitessecms/mustache": "~0.5.0"
+    "vitessecms/language": "^1.0.0",
+    "vitessecms/core": "^1.0.0",
+    "vitessecms/form": "^1.0.0",
+    "vitessecms/database": "^1.0.0",
+    "vitessecms/admin": "^1.0.0",
+    "vitessecms/content": "^1.0.0",
+    "vitessecms/mustache": "^1.0.0"
   }
 }
